Regression on baking normals with Cycles - reversed normals? #46507

Closed
opened 2015-10-16 11:06:38 +02:00 by Jaagup Irve · 9 comments

System Information
Observed on both Win and Mac

Blender Version
Broken: 2.76 official
Worked: 2.75a

Short description of error
There appears to be some baking-related bug, which rotates faces during a bake -- might either be a rotation or a flipped normal.

My artist had no time to report a bug, and it is somewhat difficult to explain why he needs the weird normal map bake, but please trust us that there is a regression and we are all sad.

Exact steps for others to reproduce the error
Open the attached file in both 2.75a and 2.76 and observe difference when hitting "bake".

**System Information** Observed on both Win and Mac **Blender Version** Broken: 2.76 official Worked: 2.75a **Short description of error** There appears to be some baking-related bug, which rotates faces during a bake -- might either be a rotation or a flipped normal. My artist had no time to report a bug, and it is somewhat difficult to explain why he needs the weird normal map bake, but please trust us that there is a regression and we are all sad. **Exact steps for others to reproduce the error** Open the attached file in both 2.75a and 2.76 and observe difference when hitting "bake".
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @irve

Added subscriber: @irve
Author

Made a mistake while attaching the file: bug.2.76.blend

Made a mistake while attaching the file: [bug.2.76.blend](https://archive.blender.org/developer/F245427/bug.2.76.blend)
Author

Might be related to #42015 , but the testcase runs into the problem even when modifier is deleted.

Might be related to #42015 , but the testcase runs into the problem even when modifier is deleted.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne changed title from Regression on baking to Regression on baking normals with Cycles - reversed normals? 2015-10-16 11:59:12 +02:00

Added subscriber: @robertm

Added subscriber: @robertm

I can also confirm this bug. It seems that some but not all faces get rotated by 180 degrees during baking.
Here another example .blend:
Baking_UV_rotation_bug.blend
Press "Bake". After baking connect the bake_texture output to the Diffuse BSDF.

I can also confirm this bug. It seems that some but not all faces get rotated by 180 degrees during baking. Here another example .blend: [Baking_UV_rotation_bug.blend](https://archive.blender.org/developer/F245833/Baking_UV_rotation_bug.blend) Press "Bake". After baking connect the bake_texture output to the Diffuse BSDF.

This issue was referenced by a3c9374440

This issue was referenced by a3c9374440a53c7f6a41627787d497975d758efe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46507
No description provided.