Fix T46507: Cycles baking re-orders face

Regression in 2.76, order of tessellated vertices needs to follow MFace tessellation.